# minhas-notas-musicais

./: README.md  main.py  pyproject.toml
minhas_notas_musicais/: __init__.py  acordes.py  escalas.py  notas.py  progressoes.py
tests/: test_acordes.py  test_escalas.py  test_notas.py  test_progressoes.py
