[tool.poetry]
name = "minhas-notas-musicais"
version = "0.1.0"
description = ""
authors = ["Lucashcr <lucash.rocha@hotmail.com>"]
readme = "README.md"
packages = [{include = "minhas_notas_musicais"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
